# framespaces

./: .gitmodules  ANode.h  ANodeDecl.h  ANodeFwd.h  ANodeImpl.h  AllocatorHelpers.h  ArrayAdapter.h  ArrayAdapterFwd.h  BNode.h  BNodeDecl.h  BNodeFwd.h  BNodeImpl.h  Builder.h  BuilderDecl.h  BuilderFwd.h  BuilderImpl.h  CMakeLists.txt  FixedSizeAllocator.h  FixedSizeArrayAllocator.h  Leaf.h  LeafDecl.h  LeafFwd.h  LeafImpl.h  README.md  bTraits.h  main.cpp  utils.h
benchmark/: CMakeLists.txt  allocatorBM.cpp  anodeBM.cpp  baseLineNumbers.cpp  bnodeBM.cpp  bufferBM.cpp  utilities.h
spaces/: CMakeLists.txt  Compact.cpp  Compact.h  CompactTest.cpp  FrameSpace.h  FrameSpaceDecl.h  FrameSpaceFwd.h  FrameSpaceImpl.h
test/: ANodeTest.cpp  BNodeTest.cpp  BuilderTest.cpp  CMakeLists.txt  TestDataTool.h  allocatorTest.cpp  bufferTest.cpp  utilities.cpp  utilities.h
